Enable predicates
